# Htaut

./: .gitignore  .travis.yml  LICENSE  README.md  Update.md  htaut.cabal
paper/: .gitignore  htaut.tex
src/: Htaut.hs
src/Htaut/: Action.hs  Proposition.hs  Proving.hs
src/Htaut/Theorem/: Basic.hs  Elementary.hs
