name:                htaut
version:             0.2.0.0
synopsis:            Tautology Proving Logic in Haskell
description:         Haskell integrated TAUtology prover in Type level.
                     Proving some transformations, and use them as haskell functions.
homepage:            https://github.com/ailrun/htaut#readme
license:             BSD3
license-file:        LICENSE
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
copyright:           Copyright, 2016 Junyoung Clare Jang
category:            Theorem Provers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Htaut
                     , Htaut.Proposition
                     , Htaut.Proving
                     , Htaut.Theorem.Basic
                     , Htaut.Theorem.Elementary
  other-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ailrun/htaut
